--- a/Quiz_mkd/Areas/Admin/Views/Question/Index.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Question/Index.cshtml
@@ -75,7 +75,7 @@
                                    asp-action="AddToQuiz"
                                    asp-route-quizId="@Model.Quiz.Id" asp-route-questionId="@item.Question.Id"
                                    class="btn btn-success mx-2">
-                                    Додади
+                                    Додаj
                                 </a>
 
                             </div>
