--- a/Quiz_mkd/Areas/Admin/Views/Quiz/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Quiz/Create.cshtml
@@ -44,9 +44,11 @@
 
 
                 <div id="first-buttons">
+                    @if (Model.Quiz.Id == 0){
                     <div  >
                         <button type="submit" class="btn btn-primary form-control">Зачувај</button>
                     </div>
+                    }
                     <div>
                         <a asp-area="User" asp-controller="Quiz" asp-action="Index" class="btn btn-primary form-control">Врати се назад</a>
                     </div>
