--- a/Quiz_mkd/Areas/User/Views/ForTheAccociation/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/ForTheAccociation/Index.cshtml
@@ -37,7 +37,7 @@
 			
 		</div>
 		<div id="accociation-image">
-			<img src="https://scontent.fskp1-2.fna.fbcdn.net/v/t39.30808-6/480233785_631293512738844_8899570323284282422_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=_PaQaBDMCMMQ7kNvwHdmqja&_nc_oc=AdljXKF6QGGjbWfeELcL4Wjg-vsRwMG-6kwrmG_THpkGtLwow3sFzBu1UPTDxY_cwY8&_nc_zt=23&_nc_ht=scontent.fskp1-2.fna&_nc_gid=y85chWLCaxOFdtsiseRvjw&oh=00_AfTFMZ4JsLZfIT6jqhMZqMauIWb3yFhq7lNSCZIGCt1fHQ&oe=687488B0" alt="Alternate Text" />
+			<img src="~/Images/quiz/logo.jpg" alt="Alternate Text" />
 		</div>
 	</div>
 
