--- a/Quiz_mkd/Areas/User/Views/ForUs/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/ForUs/Index.cshtml
@@ -9,10 +9,10 @@
 	<div id="about-us-content">
 	<div class="about-us-tect-box">Ние сме група луѓе кои ја делат истата страст – љубовта кон знаењето, логиката, натпреварувањето и добрата дружба. Секој од нас доаѓа од различна позадина – некои сме инженери, наставници, уметници, програмери, студенти – но сите сме квизаџии во срце. </div>
 	<div class="about-us-tect-image">
-		<img src="https://cdn.prod.website-files.com/5f8b3f92189560cd389cf2b3/67999e9a935c56dcff90bef6_63ea3ee7ccb1b557b4a39e79_Team-Building-Quiz-Questions2.jpeg" alt="Alternate Text" />
+			<img src="~/Images/quiz/about-us1.jpg" alt="Alternate Text" />
 	</div>
 	<div class="about-us-tect-image">
-		<img src="https://scontent.fskp1-2.fna.fbcdn.net/v/t39.30808-6/480907645_641022155099313_9105257874673555308_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_ohc=MnNwN4NcnNQQ7kNvwFnR5A5&_nc_oc=AdnkSXe1UJeXkfXW6_V-c8-iYgVCNw-vJPm020iD5QY-JDXxbDmtGCmiSK11hUwNSCw&_nc_zt=23&_nc_ht=scontent.fskp1-2.fna&_nc_gid=4YNrjx3zXWIjpJuIKfcp0A&oh=00_AfRb1_xE4RLRrpLcKuRjYOuZheNmK_rmRnMHYzdzYjKl3g&oe=68743E5B" alt="Alternate Text" />
+		<img src="~/Images/quiz/abou-us-2.jpg" alt="Alternate Text" />
 	</div>
 	
 	<div class="about-us-tect-box">Веруваме дека квизот не е само забава, туку и одлична алатка за личен раст, интелектуален развој и создавање нови пријателства. Преку нашите активности сакаме да изградиме заедница каде секој љубител на квизови ќе се чувствува добредојден, охрабрен и вреднуван</div>
