--- a/Quiz_mkd/Areas/User/Views/Home/Index.cshtml
+++ b/Quiz_mkd/Areas/User/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     
     <div id="right-side">
         <div class="home-image">
-             <img class="card-img-top" src="https://scontent.fskp1-2.fna.fbcdn.net/v/t39.30808-6/260712619_128666699571189_7679932314961760562_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=itO4Ge1zHvYQ7kNvwGNlnzT&_nc_oc=AdmN9Jph2cgIMydBRs3qX-Aw5IYLw-RV2DYoy0oaWEyS4W--kscB2CmXaVpXeEkgCTg&_nc_zt=23&_nc_ht=scontent.fskp1-2.fna&_nc_gid=SXMuZeGm_jzf7DveVT1LSw&oh=00_AfTWis7SK0tgdnU954OZMGMeU2ibyfo5HKAx6bsjTyGZag&oe=6872E9D8" alt="Card image cap">
+             <img class="card-img-top" src="~/Images/quiz/logo.jpg" alt="Card image cap">
         </div>
     </div>
     
