--- a/Quiz_mkd/wwwroot/css/welcome-to-quizz.css
+++ b/Quiz_mkd/wwwroot/css/welcome-to-quizz.css
@@ -7,10 +7,13 @@
     text-align: center;
     justify-content: center;
 }
+    .welcome-to-quiz-container h1, .welcome-to-quiz-container p{
+        color:black;
+    }
 
-#start-buttons div{
-    width:auto;
-}
+    #start-buttons div {
+        width: auto;
+    }
 
 #start-buttons{
     display:flex;
