enabled sending email with gmail with my personal email require to change in secrets the email and pass for the official quiz email

--- a/Quiz_mkd/Areas/Admin/Views/Email/Create.cshtml
+++ b/Quiz_mkd/Areas/Admin/Views/Email/Create.cshtml
@@ -7,7 +7,7 @@
 
         @if (Model.emailsSent) 
         {
-            <h1>Маилови се пратени</h1>
+        <h1 class ="text-primary">Маилови се пратени</h1>
         }
 
     <form method="post">
