--- a/Quiz_mkd/Views/Shared/_Layout.cshtml
+++ b/Quiz_mkd/Views/Shared/_Layout.cshtml
@@ -103,7 +103,9 @@
         <div style="display:flex; flex-direction:row; justify-content:center; align-items:center; width:100%; color:#003463; text-align:start; margin-top:1.5em;margin-bottom:1.5em;" id="footer-first-line">
             <h5 style="width:auto; margin-left:1em; margin-right:1em;">Контакт:</h5>
             <p style="width:auto; margin:0; margin-left:1em; margin-right:1em;">mka.mkd21@gmail.com</p>
-            <a href="https://www.facebook.com/makedonska.kviz.asocijacija" style="width:auto; text-decoration:none; margin-left:1em; margin-right:1em; font-size:1.2em;">Facebook</a>
+            <a href="https://www.facebook.com/makedonska.kviz.asocijacija" style="width:auto; text-decoration:none; margin-left:1em; margin-right:1em; font-size:1.2em;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951" />
+                        </svg></a>
         </div>
         
         <div style="display:flex; flex-direction:row; justify-content:space-between; align-items:center; width:100%; " id="footer-second-line">
